--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -4,12 +4,14 @@
 name: Go
 
 on:
+  pull_request:
+    branches: [ "main" ]
   push:
     branches: [ "main" ]
 
 jobs:
 
-  build:
+  ci:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
